# okex_historical_pull_data

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml
src/: data_fetcher.rs  main.rs
