[package]
name = "pull_data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fern = "0.6.2"
futures = "0.3"
indicatif = "0.17"
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1", features = ["full"] }
tokio-stream = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
